# hhnk-threedi-plugin

./: .gitignore  .pre-commit-config.yaml  404.html  CODE_QUALITY.md  __init__.py  dependencies.py  errors.docx  format_afbeeldingen.txt  index.html  mkdocs.yml  model_settings.csv  model_settings_default.csv  pyproject.toml  readme.md  ruff.toml  sitemap.xml  vs_code_osgeo4w_startup_qgis316.bat  vs_code_osgeo4w_startup_qgis322.bat  vs_code_osgeo4w_startup_qgis328.bat  vs_code_osgeo4w_startup_qgis334.bat
.github/workflows/: build_documentation.yml  pr_close_remove_preview.yml  zip-on-release.yml
.qt_for_python/uic/: hhnk_toolbox_dockwidget_base.py  hhnk_toolbox_dockwidget_base2.py  hhnk_toolbox_dockwidget_base_orig.py  model_splitter_dialog.py
JuanTry1/modelselection/: Makefile  README.html  README.txt  __init__.py  deploy.bat  local_settings.py  log_in.py  login.py  metadata.txt  modelselection.py  modelselection_dialog.py  modelselection_dialog_base.py  modelselection_dialog_base.ui  modelselection_dialog_base_JK.ui  pb_tool.cfg  resources.py  resources.qrc
deprecated/: build_docs.bat  vs_code_osgeo4w_startup_qgis322.bat
deprecated/qgis_interaction/: achtergrond_old.py  build_layer_styles_dict.py  get_layers_list.py  klimaatsommen.py  klimaatsommen_old.py  test_protocol_v21.py  test_protocol_v21_old.py
doc/: conf.py  index.rst
doc/md_files/: installation_manual.md  tests_documentation.md  usage.md
docs/: README.md  index.md
docs/md_files/: develop_manual.md  installation_manual.md  needed_data.md  polder_clusters.md  tests_documentation.md  usage.md  user_test_manual.md
docs/stylesheets/: extra.css
env/: environment.yml
hhnk_threedi_plugin/: .gitignore  TEST_PATH.py  Untitled.ipynb  __init__.py  __init__.py.bak  dependencies.py  dependencies.py.bak  deploy.bat  employee_dlg.py  exclude_copy.txt  hhnk_toolbox.py  hhnk_toolbox_dockwidget.py  hhnk_toolbox_dockwidget_base.py  hhnk_toolbox_dockwidget_base.ui  hhnk_toolbox_dockwidget_base_ui.py  local_settings.py  local_settings_default.py  metadata.txt  model_settings_default.xlsx  pb_tool.cfg  resources.py  resources.qrc  resources_rc.py  settings_default.xlsx  test_ui.py
hhnk_threedi_plugin/env/: environment.yml  environment_dev.yml  environment_dev_spyder.yml  environment_services.yml  environment_spyder_dev.yml  environment_vscode_p312.yml  environment_vscode_p39.yml
hhnk_threedi_plugin/error_messages/: input_error_messages.py
hhnk_threedi_plugin/gui/: general_objects.py  input_data.py  log_in_btn.py  (+11 more)
images/: Tabel logisch bereik en aannames.xlsx
scripts/: black_code.bat  deploy.bat  deploy.py  deploy_across_users.bat  deploy_across_users.py  deploy_plugin_across_users.bat  deploy_plugin_across_users.py  deploy_plugin_developer.py  deploy_wouter.bat  run_deploy_across_users.py  run_deploy_plugin_across_users.py  run_ruff.bat  sendkeys.bat
search/: search_index.json
stylesheets/: extra.css  headings.css
tests_htp/: README.md  test_project.py
(+1386 files in other folders)
